--- a/config/.config/kitty/kitty.conf
+++ b/config/.config/kitty/kitty.conf
@@ -3,9 +3,9 @@
 # https://sw.kovidgoyal.net/kitty/conf/
 
 # To get a full list of supported fonts use the `kitty +list-fonts` command.
-font_family     ComicShanns Nerd Font
+font_family     ComicShannsMono Nerd Font
 #font_family      JetBrainsMono Nerd Font
-font_size 13.0
+font_size 11.0
 
 scrollback_lines 8000
 
@@ -105,7 +105,8 @@ tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index
 #: The foreground and background colors
 
 #background_opacity 0.95
-background_opacity 1.0
+background_opacity 0.7
+background_blur 30
 
 
 
