--- a/config/.config/kitty/kitty.conf
+++ b/config/.config/kitty/kitty.conf
@@ -105,8 +105,8 @@ tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index
 #: The foreground and background colors
 
 #background_opacity 0.95
-background_opacity 0.7
-background_blur 30
+background_opacity 1
+#background_blur 30
 
 
 
